@@ -142,6 +142,7 @@ Cacti CHANGELOG
 -feature: Add parsedown to vendor library for plugin CHANGELOG and README viewing support
 -feature: Add year display to get_daysfromtime function
 -feature: Add class and version columns to Graph Template to support Streams feature
+-feature: Upgrade jquery.tablednd.js to 1.0.5
 
 1.2.29
 -issue#5843: Issue with temporary tables with use of microtime
